remove duplication and fix tests