@@ -24,7 +24,6 @@ import lombok.Data;
 import lombok.ToString;
 import lombok.extern.slf4j.Slf4j;
 import org.bouncycastle.asn1.pkcs.RSAPrivateKey;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.Authentication;
@@ -42,7 +41,7 @@ import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.RSAPrivateCrtKeySpec;
 import java.time.Duration;
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Slf4j
 @Service
@@ -51,7 +50,7 @@ public class ExchangeTokenService {
     private static final String PRIVATE_KEY_HEADER_TEMPLATE = "-----BEGIN %s-----";
     private static final String PRIVATE_KEY_FOOTER_TEMPLATE = "-----END %s-----";
 
-    private final String billingBoUrl;
+    private final String billingUrl;
     private final String billingAudience;
     private final PrivateKey jwtSigningKey;
     private final JwtService jwtService;
@@ -63,16 +62,14 @@ public class ExchangeTokenService {
     private final ProductsConnector productsConnector;
     private final String issuer;
 
-    public ExchangeTokenService(@Value("${core.billing.url}") String billingBoUrl,
-                                @Value("${core.billing.audience}") String billingAudience,
-                                JwtService jwtService,
+    public ExchangeTokenService(JwtService jwtService,
                                 InstitutionService institutionService,
                                 UserGroupService groupService,
                                 ProductsConnector productConnector,
                                 ExchangeTokenProperties properties,
                                 UserService userService) throws InvalidKeySpecException, NoSuchAlgorithmException {
-        this.billingBoUrl = billingBoUrl;
-        this.billingAudience = billingAudience;
+        this.billingUrl = properties.getBillingUrl();
+        this.billingAudience = properties.getBillingAudience();
         this.jwtService = jwtService;
         this.productsConnector = productConnector;
         this.institutionService = institutionService;
@@ -92,56 +89,127 @@ public class ExchangeTokenService {
         if (authentication == null) {
             throw new IllegalStateException("Authentication is required");
         }
-        final ProductGrantedAuthority productGrantedAuthority = authentication.getAuthorities()
-                .stream()
-                .filter(grantedAuthority -> SelfCareGrantedAuthority.class.isAssignableFrom(grantedAuthority.getClass()))
-                .map(SelfCareGrantedAuthority.class::cast)
-                .filter(grantedAuthority -> institutionId.equals(grantedAuthority.getInstitutionId()))
-                .map(SelfCareGrantedAuthority::getRoleOnProducts)
+
+        List<Map<String, ProductGrantedAuthority>> productGrantedAuthorityMap = retrieveProductGrantedAuthorityMap(authentication, institutionId);
+        final ProductGrantedAuthority productGrantedAuthority = productGrantedAuthorityMap.stream()
                 .filter(map -> map.containsKey(productId))
                 .map(map -> map.get(productId))
                 .findAny()
                 .orElseThrow(() -> new IllegalArgumentException(String.format("A Product Granted SelfCareAuthority is required for product '%s' and institution '%s'", productId, institutionId)));
-        Claims selcClaims = jwtService.getClaims(authentication.getCredentials().toString());
-        Assert.notNull(selcClaims, "Session token claims is required");
-        InstitutionInfo institutionInfo = institutionService.getInstitution(institutionId);
-        Assert.notNull(institutionInfo, "Institution info is required");
+
+        Institution institution = retrieveInstitution(institutionId, List.of(productGrantedAuthority), false);
         SelfCareUser principal = (SelfCareUser) authentication.getPrincipal();
+        retrieveAndSetGroups(institution, institutionId, productId, principal);
+        TokenExchangeClaims claims = retrieveAndSetClaims(authentication.getCredentials().toString(), institution, principal);
+
+        Product product = productsConnector.getProduct(productId);
+
+        environment.ifPresentOrElse(env -> claims.setAudience(product.getBackOfficeEnvironmentConfigurations().get(env).getIdentityTokenAudience())
+                , () -> claims.setAudience(product.getIdentityTokenAudience()));
+
+        log.debug(LogUtils.CONFIDENTIAL_MARKER, "Exchanged claims = {}", claims);
+        String jwts = createJwts(claims);
+        log.debug(LogUtils.CONFIDENTIAL_MARKER, "Exchanged token = {}", jwts);
+
+        final String urlBO = environment.map(env -> product.getBackOfficeEnvironmentConfigurations().get(env).getUrl())
+                .orElse(product.getUrlBO());
+
+        log.trace("exchange end");
+        return new ExchangedToken(jwts, urlBO);
+    }
+
+    public ExchangedToken retrieveBillingExchangedToken(String institutionId) {
+
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null) {
+            throw new IllegalStateException("Authentication is required");
+        }
+
+        List<String> invoiceableProductList = retrieveInvoiceableProductList();
+
+        final List<ProductGrantedAuthority> productGrantedAuthorities = new ArrayList<>();
+
+        List<Map<String, ProductGrantedAuthority>> productGrantedAuthorityMap = retrieveProductGrantedAuthorityMap(authentication, institutionId);
+        productGrantedAuthorityMap.forEach(stringProductGrantedAuthorityMap -> addProductIfIsInvoiceable(stringProductGrantedAuthorityMap, invoiceableProductList, productGrantedAuthorities));
+
+        Institution institution = retrieveInstitution(institutionId, productGrantedAuthorities, true);
+        SelfCareUser principal = (SelfCareUser) authentication.getPrincipal();
+        retrieveAndSetGroups(institution, institutionId, null, principal);
+
+        TokenExchangeClaims claims = retrieveAndSetClaims(authentication.getCredentials().toString(), institution, principal);
+        claims.setAudience(billingAudience);
+
+        log.debug(LogUtils.CONFIDENTIAL_MARKER, "Exchanged claims = {}", claims);
+        String jwts = createJwts(claims);
+        log.debug(LogUtils.CONFIDENTIAL_MARKER, "Exchanged token = {}", jwts);
+        log.trace("exchange end");
+
+        return new ExchangedToken(jwts, billingUrl);
+    }
+
+    private List<String> retrieveInvoiceableProductList() {
+        return productsConnector.getProductsTree()
+                .stream()
+                .flatMap(productTree -> {
+                    Stream<Product> nodeStream = Stream.of(productTree.getNode());
+                    Stream<Product> childrenStream = productTree.getChildren() != null
+                            ? productTree.getChildren().stream()
+                            : Stream.empty();
+                    return Stream.concat(nodeStream, childrenStream);
+                })
+                .filter(Product::isInvoiceable)
+                .map(Product::getId)
+                .toList();
+    }
+
+    private TokenExchangeClaims retrieveAndSetClaims(String credential, Institution institution, SelfCareUser principal) {
+        Claims selcClaims = jwtService.getClaims(credential);
+        Assert.notNull(selcClaims, "Session token claims is required");
         TokenExchangeClaims claims = new TokenExchangeClaims(selcClaims);
         claims.setId(UUID.randomUUID().toString());
         claims.setIssuer(issuer);
         User user = userService.getUserByInternalId(UUID.fromString(principal.getId()));
 
-        String email = Optional.ofNullable(user.getWorkContact(institutionId))
+        String email = Optional.ofNullable(user.getWorkContact(institution.getId()))
                 .map(workContract -> Objects.nonNull(workContract.getEmail())
                         ? workContract.getEmail().getValue()
                         : ""
                 )
                 .orElse(null);
-        claims.setEmail(email);
 
-        Institution institution = new Institution();
-        institution.setId(institutionId);
-        institution.setName(institutionInfo.getDescription());
-        institution.setTaxCode(institutionInfo.getTaxCode());
-        institution.setSubUnitType(institutionInfo.getSubunitType());
-        institution.setSubUnitCode(institutionInfo.getSubunitCode());
-        institution.setAooParent(institutionInfo.getAooParentCode());
-        institution.setParentDescription(institutionInfo.getParentDescription());
-        RootParent rootParent = new RootParent();
-        rootParent.setId(institutionInfo.getRootParentId());
-        rootParent.setDescription(institutionInfo.getParentDescription());
-        institution.setRootParent(rootParent);
-        institution.setOriginId(institutionInfo.getOriginId());
-        institution.setRoles(productGrantedAuthority.getProductRoles().stream()
-                .map(productRoleCode -> {
-                    Role role = new Role();
-                    role.setPartyRole(productGrantedAuthority.getPartyRole());
-                    role.setProductRole(productRoleCode);
-                    return role;
-                }).collect(Collectors.toList()));
+        claims.setEmail(email);
+        claims.setInstitution(institution);
+        claims.setDesiredExpiration(claims.getExpiration());
+        claims.setIssuedAt(new Date());
+        claims.setExpiration(Date.from(claims.getIssuedAt().toInstant().plus(duration)));
+
+        return claims;
+    }
+
+
+    private List<Map<String, ProductGrantedAuthority>> retrieveProductGrantedAuthorityMap(Authentication authentication, String institutionId) {
+        return authentication.getAuthorities()
+                .stream()
+                .filter(grantedAuthority -> SelfCareGrantedAuthority.class.isAssignableFrom(grantedAuthority.getClass()))
+                .map(SelfCareGrantedAuthority.class::cast)
+                .filter(grantedAuthority -> institutionId.equals(grantedAuthority.getInstitutionId()))
+                .map(SelfCareGrantedAuthority::getRoleOnProducts)
+                .toList();
+    }
+
+
+    private String createJwts(TokenExchangeClaims claims) {
+        return Jwts.builder()
+                .setClaims(claims)
+                .signWith(SignatureAlgorithm.RS256, jwtSigningKey)
+                .setHeaderParam(JwsHeader.KEY_ID, kid)
+                .setHeaderParam(Header.TYPE, Header.JWT_TYPE)
+                .compact();
+    }
+
+    private void retrieveAndSetGroups(Institution institution, String institutionId, String productId, SelfCareUser principal) {
         Page<UserGroupInfo> groupInfos = groupService.getUserGroups(Optional.of(institutionId),
-                Optional.of(productId),
+                Optional.ofNullable(productId),
                 Optional.of(UUID.fromString(principal.getId())),
                 Pageable.ofSize(100));// 100 is a reasonably safe number to retrieve all groups related to a generic user
         if (groupInfos.hasNext()) {
@@ -153,76 +221,13 @@ public class ExchangeTokenService {
         if (!groupInfos.isEmpty()) {
             institution.setGroups(groupInfos.stream()
                     .map(UserGroupInfo::getId)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
-        claims.setInstitution(institution);
-        Product product = productsConnector.getProduct(productId);
-        environment.ifPresentOrElse(env -> claims.setAudience(product.getBackOfficeEnvironmentConfigurations().get(env).getIdentityTokenAudience())
-                , () -> claims.setAudience(product.getIdentityTokenAudience()));
-        claims.setDesiredExpiration(claims.getExpiration());
-        claims.setIssuedAt(new Date());
-        claims.setExpiration(Date.from(claims.getIssuedAt().toInstant().plus(duration)));
-        log.debug(LogUtils.CONFIDENTIAL_MARKER, "Exchanged claims = {}", claims);
-        String jwts = Jwts.builder()
-                .setClaims(claims)
-                .signWith(SignatureAlgorithm.RS256, jwtSigningKey)
-                .setHeaderParam(JwsHeader.KEY_ID, kid)
-                .setHeaderParam(Header.TYPE, Header.JWT_TYPE)
-                .compact();
-        log.debug(LogUtils.CONFIDENTIAL_MARKER, "Exchanged token = {}", jwts);
-        final String urlBO = environment.map(env -> product.getBackOfficeEnvironmentConfigurations().get(env).getUrl())
-                .orElse(product.getUrlBO());
-        log.trace("exchange end");
-        return new ExchangedToken(jwts, urlBO);
     }
 
-    public ExchangedToken retrieveBillingExchangedToken(String institutionId, Optional<String> environment) {
-
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication == null) {
-            throw new IllegalStateException("Authentication is required");
-        }
-
-        List<Product> tempList = new ArrayList<>();
-        productsConnector.getProductsTree()
-                .forEach(productTree -> {
-                    tempList.add(productTree.getNode());
-                    tempList.addAll(productTree.getChildren());
-                });
-
-        List<String> productList = tempList.stream()
-                .filter(Product::isInvoiceable)
-                .map(Product::getId)
-                .toList();
-
-        final List<ProductGrantedAuthority> productGrantedAuthorities = new ArrayList<>();
-
-        authentication.getAuthorities()
-                .stream()
-                .filter(grantedAuthority -> SelfCareGrantedAuthority.class.isAssignableFrom(grantedAuthority.getClass()))
-                .map(SelfCareGrantedAuthority.class::cast)
-                .filter(grantedAuthority -> institutionId.equals(grantedAuthority.getInstitutionId()))
-                .map(SelfCareGrantedAuthority::getRoleOnProducts)
-                .forEach(stringProductGrantedAuthorityMap -> checkIfIsInvoiceable(stringProductGrantedAuthorityMap, productList, productGrantedAuthorities));
-
-        Claims selcClaims = jwtService.getClaims(authentication.getCredentials().toString());
-        Assert.notNull(selcClaims, "Session token claims is required");
+    private Institution retrieveInstitution(String institutionId, List<ProductGrantedAuthority> productGrantedAuthorities, boolean isBillingToken) {
         InstitutionInfo institutionInfo = institutionService.getInstitution(institutionId);
         Assert.notNull(institutionInfo, "Institution info is required");
-        SelfCareUser principal = (SelfCareUser) authentication.getPrincipal();
-        TokenExchangeClaims claims = new TokenExchangeClaims(selcClaims);
-        claims.setId(UUID.randomUUID().toString());
-        claims.setIssuer(issuer);
-        User user = userService.getUserByInternalId(UUID.fromString(principal.getId()));
-
-        String email = Optional.ofNullable(user.getWorkContact(institutionId))
-                .map(workContract -> Objects.nonNull(workContract.getEmail())
-                        ? workContract.getEmail().getValue()
-                        : ""
-                )
-                .orElse(null);
-        claims.setEmail(email);
-
         Institution institution = new Institution();
         institution.setId(institutionId);
         institution.setName(institutionInfo.getDescription());
@@ -236,63 +241,33 @@ public class ExchangeTokenService {
         rootParent.setDescription(institutionInfo.getParentDescription());
         institution.setRootParent(rootParent);
         institution.setOriginId(institutionInfo.getOriginId());
-
-        institution.setRoles(retrieveInstitutionRoles(productGrantedAuthorities));
-
-
-        Page<UserGroupInfo> groupInfos = groupService.getUserGroups(Optional.of(institutionId),
-                Optional.of(UUID.fromString(principal.getId())),
-                Pageable.ofSize(100));// 100 is a reasonably safe number to retrieve all groups related to a generic user
-        if (groupInfos.hasNext()) {
-            log.warn(String.format("Current user (%s) is member of more than 100 groups related to institution %s. The Identity Token will contain only the first 100 records",
-                    principal.getId(),
-                    institutionId));
-        }
-        if (!groupInfos.isEmpty()) {
-            institution.setGroups(groupInfos.stream()
-                    .map(UserGroupInfo::getId)
-                    .collect(Collectors.toList()));
-        }
-        claims.setInstitution(institution);
-
-        claims.setAudience(billingAudience);
-        claims.setDesiredExpiration(claims.getExpiration());
-        claims.setIssuedAt(new Date());
-        claims.setExpiration(Date.from(claims.getIssuedAt().toInstant().plus(duration)));
-        log.debug(LogUtils.CONFIDENTIAL_MARKER, "Exchanged claims = {}", claims);
-        String jwts = Jwts.builder()
-                .setClaims(claims)
-                .signWith(SignatureAlgorithm.RS256, jwtSigningKey)
-                .setHeaderParam(JwsHeader.KEY_ID, kid)
-                .setHeaderParam(Header.TYPE, Header.JWT_TYPE)
-                .compact();
-        log.debug(LogUtils.CONFIDENTIAL_MARKER, "Exchanged token = {}", jwts);
-        log.trace("exchange end");
-        return new ExchangedToken(jwts, billingBoUrl);
+        institution.setRoles(retrieveInstitutionRoles(productGrantedAuthorities, isBillingToken));
+        return institution;
     }
 
-    private List<Role> retrieveInstitutionRoles(List<ProductGrantedAuthority> productGrantedAuthorities) {
+    private List<Role> retrieveInstitutionRoles(List<ProductGrantedAuthority> productGrantedAuthorities, boolean isBillingToken) {
         List<Role> roles = new ArrayList<>();
 
         for (ProductGrantedAuthority authority : productGrantedAuthorities) {
-            roles.addAll(constructRole(authority));
+            roles.addAll(constructRole(authority, isBillingToken));
         }
         return roles;
     }
 
-    private List<Role> constructRole(ProductGrantedAuthority productGrantedAuthority) {
+    private List<Role> constructRole(ProductGrantedAuthority productGrantedAuthority, boolean isBillingToken) {
         return productGrantedAuthority.getProductRoles().stream()
                 .map(productRoleCode -> {
                     Role role = new Role();
                     role.setPartyRole(productGrantedAuthority.getPartyRole());
                     role.setProductRole(productRoleCode);
-                    role.setProductId(productGrantedAuthority.getProductId());
+                    if (isBillingToken) {
+                        role.setProductId(productGrantedAuthority.getProductId());
+                    }
                     return role;
-                }).collect(Collectors.toList());
+                }).toList();
     }
 
-
-    private void checkIfIsInvoiceable(Map<String, ProductGrantedAuthority> map, List<String> productList, List<ProductGrantedAuthority> productGrantedAuthorities) {
+    private void addProductIfIsInvoiceable(Map<String, ProductGrantedAuthority> map, List<String> productList, List<ProductGrantedAuthority> productGrantedAuthorities) {
         map.keySet()
                 .forEach(key -> productList.stream().filter(key::equalsIgnoreCase)
                         .findFirst()
